--- a/index.html
+++ b/index.html
@@ -42,26 +42,6 @@
         </div>
 
         <div id="product-container" class="row row-cols-1 row-cols-md-3 g-4">
-
-            <div class="col">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">MacBook Pro</h5>
-                        <p class="card-text text-primary fw-bold">£1,200</p>
-                        <button class="btn btn-outline-dark btn-sm">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Logitech Mouse</h5>
-                        <p class="card-text text-primary fw-bold">£50</p>
-                        <button class="btn btn-outline-dark btn-sm">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -70,9 +50,9 @@
             <div class="col-md-6 offset-md-3">
                 <div class="card bg-light text-white shadow">
                     <div class="card-body text-center">
-                        <h5 class="text-uppercase small text-dark">Total Inventory Value</h5>
+                        <h5 class="text-uppercase small text-dark">Cart Total</h5>
                         <h2 id="total-bill" class="display-5 fw-bold text-dark">0.00 £</h2>
-                        <p class="mb-0 small text-dark">Updated in real-time</p>
+                        <p class="mb-0 small text-dark">Ready to checkout</p>
                     </div>
                 </div>
             </div>
@@ -81,6 +61,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
