--- a/index.html
+++ b/index.html
@@ -33,26 +33,27 @@
     </nav>
 
     <div class="container my-5">
-
-        <div class="row mb-4">
-            <div class="col text-center">
-                <h2 class="display-6 fw-bold">Available Inventory</h2>
-                <p class="text-muted">Explore our latest tech gadgets</p>
+        <div class="row">
+            <div class="col-lg-8">
+                <h2 class="display-6 fw-bold mb-4">Available Inventory</h2>
+                <div id="product-container" class="row row-cols-1 row-cols-md-2 g-4">
+                </div>
             </div>
-        </div>
 
-        <div id="product-container" class="row row-cols-1 row-cols-md-3 g-4">
-        </div>
-    </div>
-
-    <div class="container mt-5 mb-5">
-        <div class="row border-top pt-4">
-            <div class="col-md-6 offset-md-3">
-                <div class="card bg-light text-white shadow">
-                    <div class="card-body text-center">
-                        <h5 class="text-uppercase small text-dark">Cart Total</h5>
-                        <h2 id="total-bill" class="display-5 fw-bold text-dark">0.00 £</h2>
-                        <p class="mb-0 small text-dark">Ready to checkout</p>
+            <div class="col-lg-4">
+                <div class="sticky-top" style="top: 20px;">
+                    <div class="card shadow-sm mb-4">
+                        <div class="card-header bg-dark text-white">
+                            <h5 class="mb-0">Order Summary</h5>
+                        </div>
+                        <ul id="cart-summary" class="list-group list-group-flush">
+                            <li class="list-group-item text-muted">Your basket is empty</li>
+                        </ul>
+                        <div class="card-body bg-light border-top">
+                            <h5 class="text-uppercase small text-muted">Total to Pay</h5>
+                            <h2 id="total-bill" class="display-6 fw-bold text-dark">0.00 £</h2>
+                            <button class="btn btn-primary w-100 mt-3 fw-bold">Checkout</button>
+                        </div>
                     </div>
                 </div>
             </div>
